--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
-{
+  {
   "name": "tableau-extensions-tutorial-part-one",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/sr10pk16/tableau-extensions-tutorial-part-one.git",
   "author": "sr10pk16 <pk_prashant@yahoo.com>",
-  "license": "MIT",
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.5.0"
-  }
+  "license": "MIT"
 }
